--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MyForum</title>
+    <title>MyApp</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand">QnA Forum</a>
+          <a class="navbar-brand">My Task App</a>
         </div>
         <% if user_signed_in? %>
           Welcome, <%= current_user.email %>
@@ -27,7 +27,9 @@
           <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
         </ul>
         <% else %>
+        <ul class="nav navbar-nav" style="float: right">
           <%= link_to "Sign In", new_user_session_path %>
+          </ul>
         <% end %>
       </div>
     </nav>
