--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,24 +16,32 @@
   <body>
   <div class="container">
     <p class="alert"><%= alert %></p>
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand">My Task App</a>
         </div>
+
+        <ul class="nav navbar-nav" style="float: right">
         <% if user_signed_in? %>
-          Welcome, <%= current_user.email %>
-        <ul class="nav navbar-nav" style="float: right">
+        <li class="nav navbar-nav" style="float: right">
           <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
-        </ul>
+        </li>
         <% else %>
-        <ul class="nav navbar-nav" style="float: right">
+        <li class="nav navbar-nav">
           <%= link_to "Sign In", new_user_session_path %>
-          </ul>
+          </li>
+
         <% end %>
+        </ul>
+        
       </div>
     </nav>
-
+    <div class="container">
+    <% if user_signed_in? %>
+       Welcome, <%= current_user.email %>
+    <% end %>
+    </div>
     <%= yield %>
     </div>
   </body>
