--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,4 +1,20 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>MyApp</title>
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  </head>
 
+  <body>
+  <div class="container">
 <%= flash[:alert] %>
 <br>
 <%= link_to "New Task", new_question_path %>
@@ -26,8 +42,8 @@
     <br>
     <p>Add Comments</p>
     <%= form_for([question, question.answers.build]) do |f| %>
-      <%= f.text_area :content %>
-      <%= submit_tag "Add" %>
+      <%= f.text_area :content %><br>
+      <%= submit_tag "Add" %> 
     <% end %>
     
 
@@ -35,3 +51,6 @@
   <br>
   <br>
 <% end %>
+</div>
+</body>
+</html>
